<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    public function up(): void
    {
        Schema::table('categories', function (Blueprint $table) {
            // Thêm cột parent_id
            $table->foreignId('parent_id')->nullable()->constrained('categories')->onDelete('set null')->after('description');
            // Thêm cột sort_order
            $table->integer('sort_order')->default(0)->after('parent_id');
        });
    }

    public function down(): void
    {
        Schema::table('categories', function (Blueprint $table) {
            $table->dropColumn(['parent_id', 'sort_order']);
        });
    }
};