<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('category_attribute', function (Blueprint $table) {
        $table->foreignId('category_id')->constrained('categories')->onDelete('cascade');
        $table->foreignId('attribute_id')->constrained('attributes')->onDelete('cascade');
        $table->primary(['category_id', 'attribute_id']);
    });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('category_attribute');
    }
};
